joystick (20051019-10) unstable; urgency=low

  [ Stephen Kitt]
  
  * Switch to 3.0 (quilt) format.
  * Fix SDL-related warnings.

 -- Stephen Kitt <steve@sk2.org>  Wed, 11 Nov 2009 23:10:43 +0100

joystick (20051019-9) unstable; urgency=low

  * Handle the various buffer sizes expected in kernels 2.6.27 to 2.6.30.8
    (2.6.28 changed the value of KEY_MAX, which changed the definition of
    a joystick-related ioctl; 2.6.31 fixed the problem by handling any
    buffer size - see ec8b4b7085605e801a7740a2c3c33256aebe249c in the
    kernel git repository, which was also shipped in 2.6.30.8). Correctly
    closes: #536013. Thanks to Krzysztof A. Sobiecki for help determining
    the actual cause of the behaviour seen in jstest!
  * Avoid treating positive return values from ioctl() as errors; kernels
    starting with 2.6.32 return buffer sizes in some cases (see
    999b874f4aa39b7abf45662ff0900f943ddb2d02 in the kernel git
    repository).
  * Standards-Version 3.8.3, no change required.
  * initscript stops in level 1 as well as 0 and 6. Note that the
    initscript will be going away soon, see #540680.

 -- Stephen Kitt <steve@sk2.org>  Mon, 12 Oct 2009 15:12:52 +0200

joystick (20051019-8) unstable; urgency=low

  * Avoid failing with an exit code of 1 in the initscript; thanks Sean
    Finney! Closes: #537804

 -- Stephen Kitt <steve@sk2.org>  Tue, 21 Jul 2009 10:12:59 +0200

joystick (20051019-7) unstable; urgency=low

  * Make evtest and inputattach conflict with previous versions of
    joystick, as suggested by LI Daobing.

 -- Stephen Kitt <steve@sk2.org>  Tue, 14 Jul 2009 23:17:54 +0200

joystick (20051019-6) unstable; urgency=low

  * Add Sahara Touch-iT213 support; thanks Claudio Nieder! LP: #338746
  * Package evtest and inputattach separately. Closes: #301009
  * Ship force-feedback tools. LP: #131422
  * Add initscript to save and restore calibration data. Closes: #144766
  * Switch from cdbs to dh 7.
  * Rewrite debian/copyright.