@@ -1,19 +1,4 @@
 #!/usr/bin/make -f
 
-DEB_MAKE_BUILD_TARGET = jstest jscal inputattach evtest ffcfstress ffmvforce ffset fftest
-
 %:
-	dh $@
-
-clean:
-	make -C utils clean
-	dh clean
-
-override_dh_auto_build:
-	make -C utils $(DEB_MAKE_BUILD_TARGET)
-
-# Recover from broken initscript in -7
-override_dh_installinit:
-	dh_installinit --error-handler=true
-
-.PHONY: clean build override_dh_auto_build
+	dh --with-quilt --sourcedirectory=utils $@
