@@ -1,9 +1,14 @@
 joystick (20051019-10) unstable; urgency=low
 
   [ Stephen Kitt]
-  
   * Switch to 3.0 (quilt) format.
   * Fix SDL-related warnings.
+  * Remove fix for broken initscript in -7 (which never made it to
+    stable).
+  
+  [ Dmitrijs Ledkovs ]
+  * Simplified debian/rules; fixes FTBS with parallel make. Closes:
+    #566274.
 
  -- Stephen Kitt <steve@sk2.org>  Wed, 11 Nov 2009 23:10:43 +0100
 
